syntax = "proto3";

package chain;
option go_package = "grpc/chain/chainpb";

import "google/protobuf/timestamp.proto";

message GetHeadRequest {}

message GetHeadResponse {
  int64 height = 1;
  google.protobuf.Timestamp time = 2;
  int64 session = 3;
  int64 era = 4;
}

message GetStatusRequest {}

message GetStatusResponse {
  string client_info = 1;
  string chain_name = 2;
  string chain_type = 3;
  string node_name = 4;
  string node_health = 5;
  repeated string node_roles = 6;
  string node_version = 7;
  string node_local_peer_uid = 8;
  map<string, string> node_properties = 9;
  string genesis_hash = 10;
}

message GetMetaByHeightRequest {
  int64 height = 1;
}

message GetMetaByHeightResponse {
  google.protobuf.Timestamp time = 1;
  int64 session = 2;
  int64 era = 3;
  bool last_in_session = 4;
  bool last_in_era = 5;
  string chain = 6;
  string spec_version = 7;
}

service ChainService {
  rpc GetHead (GetHeadRequest) returns (GetHeadResponse) {};
  rpc GetStatus (GetStatusRequest) returns (GetStatusResponse) {};
  rpc GetMetaByHeight (GetMetaByHeightRequest) returns (GetMetaByHeightResponse) {};
}
